--- a/README.adoc
+++ b/README.adoc
@@ -1,73 +1,46 @@
-= docker-alpine
+### This image is built to run on s390x architecture 
+-    [build source](https://github.com/korpx-z/docker-alpine)
+-    [original source code](https://github.com/alpinelinux/docker-alpine)
 
-:ao: alpinelinux.org
-:hubp: _/alpine
-:hub: https://hub.docker.com/r/{hubp}/
+### Versions
+10, 11, 12, 13 (built within their respected branches ie: v3.12)
 
-image:https://img.shields.io/docker/stars/{hubp}.svg[link={hub}]
-image:https://img.shields.io/docker/pulls/{hubp}.svg[link={hub}]
+# Alpine
 
-The official Docker image for https://{ao}[Alpine Linux].
-The image is only 5MB and has access to a package repository that is much more featureful than other BusyBox based images.
+[Alpine Linux](https://alpinelinux.org/) is a Linux distribution built around [musl libc](https://www.musl-libc.org/) and [BusyBox](https://www.busybox.net/). The image is only 5 MB in size and has access to a [package repository](https://pkgs.alpinelinux.org/) that is much more complete than other BusyBox based images. This makes Alpine Linux a great image base for utilities and even production applications. [Read more about Alpine Linux here](https://alpinelinux.org/about/) and you can see how their mantra fits in right at home with Docker images.
 
-== Why
-Docker images today are big.
-Usually much larger than they need to be.
-There are a lot of ways to make them smaller, but the Docker populace still jumps to the `ubuntu` base image for most projects.
-The size savings over `ubuntu` and other bases are huge:
-[source]
-----
-REPOSITORY  TAG     IMAGE ID      CREATED      SIZE
-alpine      latest  961769676411  4 weeks ago  5.58MB
-ubuntu      latest  2ca708c1c9cc  2 days ago   64.2MB
-debian      latest  c2c03a296d23  9 days ago   114MB
-centos      latest  67fa590cfc1c  4 weeks ago  202MB
-----
-There are images such as `progrium/busybox` which get us close to a minimal container and package system, but these particular BusyBox builds piggyback on the OpenWRT package index, which is often lacking and not tailored towards generic everyday applications.
-Alpine Linux has a much more featureful and up to date https://pkgs.{ao}[Package Index]:
-[source]
-----
-$ docker run progrium/busybox opkg-install nodejs
-Unknown package 'nodejs'.
-Collected errors:
- * opkg_install_cmd: Cannot install package nodejs.
+![logo](https://raw.githubusercontent.com/docker-library/docs/781049d54b1bd9b26d7e8ad384a92f7e0dcb0894/alpine/logo.png)
 
-$ docker run alpine apk add --no-cache nodejs
-fetch http://dl-cdn.alpinelinux.org/alpine/v3.9/main/x86_64/APKINDEX.tar.gz
-fetch http://dl-cdn.alpinelinux.org/alpine/v3.9/community/x86_64/APKINDEX.tar.gz
-(1/7) Installing ca-certificates (20190108-r0)
-(2/7) Installing c-ares (1.15.0-r0)
-(3/7) Installing libgcc (8.3.0-r0)
-(4/7) Installing http-parser (2.8.1-r0)
-(5/7) Installing libstdc++ (8.3.0-r0)
-(6/7) Installing libuv (1.23.2-r0)
-(7/7) Installing nodejs (10.14.2-r0)
-Executing busybox-1.29.3-r10.trigger
-Executing ca-certificates-20190108-r0.trigger
-OK: 31 MiB in 21 packages
-----
-This makes Alpine Linux a great image base for utilities, as well as production applications.
-https://www.{ao}/about/[Read more about Alpine Linux here] and it will become obvious how its mantra fits in right at home with Docker images.
+# How to use this image
 
-NOTE: All of the example outputs above were last generated/updated on May 3rd 2019.
+## Usage
 
-== Usage
-Stop doing this:
-[source, dockerfile]
-----
-FROM ubuntu-debootstrap:14.04
-RUN apt-get update -q \
-  && DEBIAN_FRONTEND=noninteractive apt-get install -qy mysql-client \
-  && apt-get clean \
-  && rm -rf /var/lib/apt
-ENTRYPOINT ["mysql"]
-----
-This took 28 seconds to build and yields a 169 MB image.
-Start doing this:
-[source, dockerfile]
-----
-FROM alpine:3.9
+Use like you would any other base image:
+
+```dockerfile
+FROM quay.io/ibmz/alpine:3.7
 RUN apk add --no-cache mysql-client
 ENTRYPOINT ["mysql"]
-----
-Only 4 seconds to build and results in a 41 MB image!
+```
+
+This example has a virtual image size of only 36.8MB. Compare that to our good friend Ubuntu:
+
+```dockerfile
+FROM quay.io/ibmz/ubuntu:18.04
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends mysql-client \
+    && rm -rf /var/lib/apt/lists/*
+ENTRYPOINT ["mysql"]
+```
+
+This yields us a virtual image size of about 145MB image.
+
+# License
+
+View [license information](https://pkgs.alpinelinux.org) for the software contained in this image.
+
+As with all Docker images, these likely also contain other software which may be under other licenses (such as Bash, etc from the base distribution, along with any direct or indirect dependencies of the primary software being contained).
+
+Some additional license information which was able to be auto-detected might be found in [the `repo-info` repository's `alpine/` directory](https://github.com/docker-library/repo-info/tree/master/repos/alpine).
+
+As for any pre-built image usage, it is the image user's responsibility to ensure that any use of this image complies with any relevant licenses for all software contained within.
